started implementing neuron

--- a/implementation/CMakeLists.txt
+++ b/implementation/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.10)
 
-project(MicrogradCPP)
+project(CustomNumberCPP)
 
 add_subdirectory(custom-number) #CustomNumber library
+#add_subdirectory(neural-network) #NeuralNet library
+
 add_subdirectory(application) #App executable
