--- a/implementation/custom-number/CMakeLists.txt
+++ b/implementation/custom-number/CMakeLists.txt
@@ -1,4 +1,7 @@
-add_library(CustomNumber source/CustomNumber.cpp include/CustomNumber.hpp)
+add_library(CustomNumber source/CustomNumber.cpp include/CustomNumber.hpp source/CustomNumberManager.cpp include/CustomNumberManager.hpp include/CustomNumberOperations.hpp)
+#add_library(CustomNumberManager source/CustomNumberManager.cpp include/CustomNumberManager.hpp)
+#add_library(CustomNumberOperations include/CustomNumberOperations.hpp)
+
 target_include_directories(CustomNumber PUBLIC
     ${CMAKE_CURRENT_SOURCE_DIR}/include
 )
